<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CalorieActivity">


    <TextView
        android:id="@+id/abt_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/title_calorie"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cal_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cal_sum"
        android:textColor="@color/grey_tooltip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/abt_txt" />

    <ImageView
        android:id="@+id/img_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_summary"
        android:layout_marginTop="40dp" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/food_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="@string/food"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/mac_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serving_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="200dp"
        android:hint="@string/serving"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/mac_serving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/tvAngle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_summary"
        android:layout_marginTop="300dp"/>

    <com.github.shchurov.horizontalwheelview.HorizontalWheelView
        android:id="@+id/horizontalWheelView"
        android:layout_width="200dp"
        android:layout_height="64dp"
        android:layout_marginTop="350dp"
        android:paddingBottom="32dp"
        app:activeColor="@color/orange_base"
        app:normalColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_summary" />
    <Button
        android:id="@+id/add_cal_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        android:background="@color/orange_base"
        android:text="@string/continue_on"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/orange_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>