<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_bg"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity">


    <TextView
        android:id="@+id/about_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="About You"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/about_sum"
        android:textColor="@color/grey_tooltip"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.128"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_txt" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/pick_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_summary" />

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/rectangular_back"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toRightOf="@+id/date_picker_actions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_txt" />

    <Button
        android:id="@+id/date_picker_actions"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:layout_marginTop="80dp"
        android:onClick="showDatePickerDialog"
        app:icon="@drawable/ic_calendar_white_foreground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.673"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_summary"
        tools:ignore="UsingOnClickInXml" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/gender_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:hint="Gender"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/menuAutoComplete1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calorie_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginLeft="200dp"
        android:hint="Calorie"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/menuAutoComplete2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:hint="Weight(lbs)"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/menuAutoComplete3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/height_menu"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginLeft="200dp"
        android:hint="Height(cm)"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:counterTextColor="@color/white"
        app:passwordToggleTint="@color/white"
        app:placeholderTextColor="@color/white"
        app:prefixTextColor="@color/white"
        app:startIconTint="@color/orange_base"
        app:suffixTextColor="@color/white">

        <AutoCompleteTextView
            android:id="@+id/menuAutoComplete4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/continue_forward"
        android:onClick="sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="40dp"
        android:background="@color/orange_base"
        android:text="@string/continue_on"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/orange_base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>